# aeternum

./: .gitignore  LEGEND.nou  LICENSE  README.md  TODO.nou  install-hub  install-sdk  setup
algorithms/: INFO.nou  binary_search.c  binary_search.nou  binary_search.pl
algorithms/binary_search/: binary_search.awk  binary_search.c  binary_search.pl
bash/: INFO.nou  INFO.otl  check-program  for  getopts  getopts-long  heredoc  redirections.nou  while
buildsys/: buildsystem.nou
buildsystems/: buildsystem.nou
buildsystems/buildroot/: INFO.nou  mdev-sys-hotplug.nou  reproducible-builds.nou
buildsystems/cmake/testing/common/: BaseTest.cmake  CMakeLists.txt  TestAll.cmake  example.cpp
buildsystems/cross/: INFO.nou  WORKLOG.nou
buildsystems/infra/: INFO.nou  trap.nou
c++/: INFO.nou  gcc-flags.nou
cmake/: INFO.nou  cross-compiling.nou  debug_escaping.nou
cmake/demo-deps-custom/: CMakeLists.txt  compile
documenting/: INFO.nou  community.nou  doxygen.nou  faq-release.nou  inner-source.nou  jekyll-site.nou  jekyll.nou  jira.nou  licensing.nou  man.nou  markdown.nou  services.nou  site-static.nou  sphinx.nou  standards.nou
ext-deps/: deps-mgmt.nou
frameworks/: .clang-format  buildsystem.nou  cuda.nou  db.nou  dbus.nou  gfx.nou  gl.nou  gtest.nou  physics.nou  qt.nou  xlib.nou
frameworks/SDL2/cmake/: CMakeLists.txt  Makefile  TODO.nou  main.cpp
game/: game.nou
gamedev/: INFO.nou  assets.nou  books.nou  design.nou  game.nou  generation.nou  graphics.nou  libraries.nou  market.nou  physics.nou  post-mortem.nou  publishing.nou  sdk.nou  sites.nou  sound.nou  src.nou  success_story.nou  voxel.nou
github/: faq-docs.nou  jira.nou  licensing.nou  services.nou  site-jekyll.nou  site-static.nou
infra/: INFO.nou
javascript/: NOTE.nou  debug.js  snippets.js
man/: LEGEND.nou
mk_build/: Makefile0_basic  Makefile0_basic.mk  Makefile1_simple.mk  Makefile4_srcdir  Makefile5_modules  Makefile5_modules.mk  Makefile6_dependency
mk_kernel/: Makefile0_simple.mk
net/: INFO.nou
network/: INFO.nou  LEGEND.nou  dns.nou  kernel.nou  libraries.nou  monitoring.nou
perl/: EXAMPLES.nou  INFO.nou
primary/: best.nou  cheetsheets.nou  languages.nou
python/: DEBUG.nou  EXAMPLES.nou  MAP.nou  MAP.otl  TESTING.nou
testing/: INFO.nou
(+688 files in other folders)
